XT894 How to move termux into external sd.

--- a/phone.htm
+++ b/phone.htm
@@ -736,6 +736,10 @@ Build Kernel 6.1.80</a><br>
     <a href="phone/xt894_android_safestrap.htm">
     如何進入Safestrap</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_android_termux_sd.htm">
+    如何將Termux移到外部MicroSD</a><br>
+
 &oplus;
 <b>Alpine</b><br>
 
