--- a/phone/xt894_android_skip_setup.htm
+++ b/phone/xt894_android_skip_setup.htm
@@ -12,7 +12,7 @@ https://www.youtube.com/watch?v=Zr84DLKXdwA<br><br>
 1. 停在Welcome畫面<br>
 2. 收起鍵盤<br>
 3. 橫屏顯示<br>
-4. 點擊四個角落(需要耐心測試)
+4. 點擊四個角落(需要耐心測試，順序是左上、右上、右下、左下)
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
