XT894 How to install debian under termux.

--- a/phone.htm
+++ b/phone.htm
@@ -737,6 +737,10 @@ Build Kernel 6.1.80</a><br>
     如何進入Safestrap</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_android_termux_debian.htm">
+    如何安裝Debian系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/xt894_android_termux_sd.htm">
     如何將Termux移到外部MicroSD</a><br>
 
