--- a/phone/xt894_android_termux_debian.htm
+++ b/phone/xt894_android_termux_debian.htm
@@ -40,7 +40,7 @@ $ termux-x11 :0 -ac
 
 $ proot-distro login debian --user user --shared-tmp
 $ export DISPLAY=:0
-$ PULSE_SERVER=tcp:127.0.0.1
+$ export PULSE_SERVER=tcp:127.0.0.1
 $ dbus-launch --exit-with-session startxfce4
 </pre>
 
