Pro1 Fixed proot-distro signal-9 issue.

--- a/phone.htm
+++ b/phone.htm
@@ -414,6 +414,10 @@ F(x)tec Pro1</h3>
     <a href="phone/pro1_lineage_setup.htm">
     安裝系統</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pro1_lineage_fix_termux.htm">
+    解決proot-distro: Process completed (signal 9) - press Enter問題</a><br>
+
 &oplus;
 <b>Sailfish OS</b><br>
 
